updated test files

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,25 @@
-manifest {
-    name = 'schema-test-pipeline'
-    version = '1.0'
+aws {
+   region = 'us-east-1'
+   client {
+      uploadChunkSize = 10485760
+   }
+   batch {
+      volumes = ['/staging/scratch':params.efs_file_system_id]
+      cliPath = '/home/ec2-user/miniconda/bin/aws'
+      executionRole = 'arn:aws:iam::001762009032:role/TowerForge-3oRO4uyYos8perj6gnvROK-ExecutionRole'
+   }
+}
+
+process {
+    executor = 'awsbatch'
+    queue = 'your-batch-queue-name'  // Update this
+}
+
+fusion {
+    enabled = true
+    exportStorageCredentials = true
+}
+
+wave {
+    enabled = true
 }
