--- a/nextflow.config
+++ b/nextflow.config
@@ -1,1 +1,5 @@
-test nextflow.config file placeholder
+params {
+    input = "s3://my-bucket/input-data"
+    outdir = "s3://my-bucket/output"
+    pipeline_info = "s3://my-bucket/pipeline_info"
+}
