--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,5 @@
 params {
     input = "s3://my-bucket/input-data"
-    outdir = "s3://my-bucket/output1"
+    outdir = "s3://scidev-playground-eu-west-2/scratch/"
     pipeline_info = "s3://my-bucket/pipeline_info"
 }
